--- a/articles1.html
+++ b/articles1.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
       <metra charset="utf-8">
-      <title> Блог</title>
+      <title> Лёоооооооооооооооооооооооооооооооооооооооооооооохаааааааааааааааааааааааааааааааа</title>
 </head>
 <body>
   <header>
@@ -20,7 +20,7 @@
     <p>Надя помогла классу</p>
   </div>
   <div>
-    <h1>Ошибка</h1>
+        <h1>CS G......-ERROR404----</h1>
     <p>jhfsdjnfjkdshfuisadfjkdsfsiofjksdidlsjfioskoplafikudsfkljdjkfhjkSNjkufsofkdsuifsdujuakljygtjrsuajkfdytiudtujsfhguydjgtfjdkcjrgtykcjdghfklcsgdhkfsjhugcxksxalghadhfhjnxjsazfsafzszhjgukudxgdjsusxyhxagbxahehfawweyjyfhjxgjkfxshjdhsjxgfhzhjs</p>
   </div>
 </body>
