--- a/articles1.html
+++ b/articles1.html
@@ -15,8 +15,8 @@
        </nav>
   </header> 
   <div>
-    <h1>Святая Надя</h1>
-    <p>Надя помогла классу</p>
+    <h1>Святая Надюха</h1>
+    <p>Надюха помогла классу</p>
   </div>
   <div>
     <h1>CS G...- ERROR 382-.-.---</h1>
