--- a/articles1.html
+++ b/articles1.html
@@ -17,8 +17,8 @@
        </nav>
   </header> 
   <div>
-    <h2 class="blue-h2">Святая Надя</h2>
-    <p class="statya">Надя помогла классу</p>
+    <h2 class="blue-h2">Святая Надежда</h2>
+    <p class="statya">НадЮха помогла классу</p>
   </div>
   <div>
     <h2 class="blue-h2">CS G...- ERROR 382-.-.---</h2>
