--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>Главная страница ChiMarket</title>
 	<link rel="stylesheet" type="text/css" href="silka.css">
 	<link rel="stylesheet" type="text/css" href="Shapka.css">
+	<meta name="CatCutf050f8dcd9" content="AD639BFC8D8E669BC87B5A37CFFA0944Y8681" />
 </head>
 <body>
 <div class="parent-shapka">
