--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <metra charset="utf-8">
       <title>С Новым Годом!</title>
       <link rel="stylesheet" type="text/css" href="HNY.css">
-      <link rel="icon" type="image/png" sizes="16x16" href="pixil-frame-0">
+      <link rel="shortcut icon" sizes="16x16" href="pixil-frame-0.png" type="image/png">
 </head>
 <body>
   <h1>С Новым 2021 Годом!</h1>
