--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <div class="p2">
     <p>Я желаю Вам, чтобы вы исполнили все свои цели и мечты в 2021. Чтобы Колесо Фортуны всегда было на вашей стороне!</p>
   </div>
-  <p class="img">
-    <img src="https://stihi.ru/pics/2020/12/17/8308.jpg">
+  <p class="link">
+    <a href="#">Проект</a>
   </p>
 </body>
 </html>
