--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <p>Я желаю Вам, чтобы вы исполнили все свои цели и мечты в 2021. Чтобы Колесо Фортуны всегда было на вашей стороне!</p>
   </div>
   <p class="link">
-    <a href="#">Проект</a>
+    <a href="School_Project.7z">Проект</a>
   </p>
 </body>
 </html>
