--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
       <link rel="shortcut icon" href="pixil-frame-0.png" type="image/png">
 </head>
 <body>
-  <h1>С Новым 2021 Годом!</h1>
+  <h1>Знамения</h1>
   <div class="p1">
-    <p>Я всех поздравляю с 2021 годом! 2020 встретил нас счастливо, но на протяжении этого года случилось много несчастных случаев, можно сказать катастроф! Но мы смогли провести этот год более или менее нормально!</p>
+    <p>Оно придёт скоро</p>
   </div>
   <div class="p2">
-    <p>Я желаю Вам, чтобы вы исполнили все свои цели и мечты в 2021. Чтобы Колесо Фортуны всегда было на вашей стороне!</p>
+    <p>Проектик</p>
   </div>
   <p class="link">
     <a href="School_Project.7z">Проект</a>
