--- a/index.html
+++ b/index.html
@@ -2,20 +2,20 @@
 <html lang="ru">
 <head>
       <metra charset="utf-8">
-      <title>С Новым Годом!</title>
+      <title>Python_chebotarev</title>
       <link rel="stylesheet" type="text/css" href="HNY.css">
       <link rel="shortcut icon" href="pixil-frame-0.png" type="image/png">
 </head>
 <body>
-  <h1>Знамения</h1>
+  <h1>Проект</h1>
   <div class="p1">
-    <p>Оно придёт скоро</p>
+    <p>Проект Чеботарева Сергея 9б класса</p>
   </div>
   <div class="p2">
-    <p>Проектик</p>
+    <p>Документация появится 09.04.2022. Вместе с кодом, подстроенным для сдачи.</p>
   </div>
   <p class="link">
-    <a href="School_Project.7z">Проект</a>
+    <a href="School_Project.7z"> ==> Скачать архив <== Проект</a>
   </p>
 </body>
 </html>
