--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <p>Документация появится 09.04.2022. Вместе с кодом, подстроенным для сдачи.</p>
   </div>
   <p class="link">
-    <a href="School_Project.7z"> ==> Скачать архив <== Проект</a>
+    <a href="School_Project.7z"> ==> Скачать архив <== </a>
   </p>
 </body>
 </html>
