--- a/index.html
+++ b/index.html
@@ -17,5 +17,8 @@
   <p class="link">
     <a href="School_Project.7z"> ==> Скачать архив <== </a>
   </p>
+  <p class="link">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/K-0UEz47SwQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </p>
 </body>
 </html>
