--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <p>Документация появится 09.04.2022. Вместе с кодом, подстроенным для сдачи.</p>
   </div>
   <p class="link">
-    <a href="School_Project.7z"> ==> Скачать архив <== </a>
+    <a href="School_Project_Chebotarev_9b.7z"> ==> Скачать архив <== </a>
   </p>
   <p class="link">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/K-0UEz47SwQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
