--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p>Проект Чеботарева Сергея 9б класса</p>
   </div>
   <div class="p2">
-    <p>Документация появится 09.04.2022. Вместе с кодом, подстроенным для сдачи.</p>
+    <p>09.04.2022 появится, подстроенным для сдачи.</p>
   </div>
   <p class="link">
     <a href="School_Project_Chebotarev_9b.7z"> ==> Скачать архив <== </a>
