--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p>Проект Чеботарева Сергея 9б класса</p>
   </div>
   <div class="p2">
-    <p>09.04.2022 появится, подстроенным для сдачи. Игорь Александрович, объесните мне в ВК, пожалуйста, что делать с картинками.</p>
+    <p>Программа (+ папка с текстом для программы) + документация + презентация на защиту.</p>
   </div>
   <p class="link">
     <a href="School_Project_Chebotarev_9b.7z"> ==> Скачать архив <== </a>
